--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch==1.10.0
-torchvision==0.11.1
+# torch==1.10.0
+# torchvision==0.11.1
 pytorch-lightning==1.5.2
 einops==0.3.2
 kornia==0.6.1
@@ -11,7 +11,7 @@ imageio-ffmpeg==0.4.5
 torch_optimizer==0.3.0
 
 # for mesh
-PyMCubes==0.1.2
+# PyMCubes==0.1.2
 pycollada==0.7.1
 trimesh==3.9.1
 pyglet==1.5.10
